--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,18 @@
     <groupId>org.dilaraseker</groupId>
     <artifactId>JavaHttpCommunication</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <!-- Apache HttpClient Bağımlılığı -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
 </project>
